//
// Created by manat on 09.11.2022.
//

#ifndef LAB4DICE_IDICE_H
#define LAB4DICE_IDICE_H
class IDice {
public:
    virtual int GetRandomSide() const = 0;
};

#endif //LAB4DICE_IDICE_H
